--- a/client/src/components/posts/PostAuthorInfo/PostAuthorInfo.module.scss
+++ b/client/src/components/posts/PostAuthorInfo/PostAuthorInfo.module.scss
@@ -24,8 +24,7 @@
     span {
         display: flex;
         align-items: center;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        overflow-wrap: anywhere;
         color: $text-color--normal;
         font-size: $font-size--small;
     }
@@ -33,15 +32,5 @@
     .date {
         color: $text-color--undertone;
         font-size: $font-size--smaller;
-    }
-
-    @media screen and (max-width: 500px) {
-        & {
-            // max-width: 18rem;
-
-            span {
-                // max-width: 12rem;
-            }
-        }
     }
 }
