--- a/client/src/components/posts/PostRating/PostRating.module.scss
+++ b/client/src/components/posts/PostRating/PostRating.module.scss
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-columns: repeat(3, auto);
     column-gap: 1rem;
+    align-items: center;
     justify-content: flex-start;
 
     .rating {
@@ -12,13 +13,22 @@
         align-items: center;
         justify-content: center;
         height: 100%;
-        overflow-x: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
         color: $rating-text-color--def;
         font-family: $font-family--caption;
         font-size: $font-size--small;
         cursor: default;
         transition: 150ms color ease;
+    }
+
+    .disabledIconButton {
+        opacity: 0.3;
+    }
+
+    @media screen and (max-width: 500px) {
+        .rating {
+            .description {
+                display: none;
+            }
+        }
     }
 }
