--- a/client/src/components/users/UserDetails/UserDetails.module.scss
+++ b/client/src/components/users/UserDetails/UserDetails.module.scss
@@ -27,6 +27,7 @@
     }
 
     .infoBlock {
+        overflow-wrap: anywhere;
         color: $text-color--normal;
         font-family: $font-family--normal;
         font-size: $font-size--medium;
